Se realizo el capitulo 11

--- a/11.-Recursión, Iteración busqueda y Ordenamiento.ipynb
+++ b/11.-Recursión, Iteración busqueda y Ordenamiento.ipynb
@@ -34,11 +34,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "7221f5f0-f2e3-4c4f-a036-b7c0477a8114",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def fibonacci(n):\n",
+    "    if n == 0:\n",
+    "        return 0\n",
+    "    elif n == 1:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return fibonacci(n-1) + fibonacci(n-2)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -50,11 +58,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "39156c16-41fa-4aab-ad45-86cc1b8f9e99",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fibonacci(0) = 0\n",
+      "Fibonacci(1) = 1\n",
+      "Fibonacci(2) = 1\n",
+      "Fibonacci(3) = 2\n",
+      "Fibonacci(4) = 3\n",
+      "Fibonacci(5) = 5\n",
+      "Fibonacci(6) = 8\n",
+      "Fibonacci(7) = 13\n",
+      "Fibonacci(8) = 21\n",
+      "Fibonacci(9) = 34\n",
+      "Fibonacci(10) = 55\n",
+      "Fibonacci(11) = 89\n",
+      "Fibonacci(12) = 144\n",
+      "Fibonacci(13) = 233\n",
+      "Fibonacci(14) = 377\n",
+      "Fibonacci(15) = 610\n",
+      "Fibonacci(16) = 987\n",
+      "Fibonacci(17) = 1597\n",
+      "Fibonacci(18) = 2584\n",
+      "Fibonacci(19) = 4181\n",
+      "Fibonacci(20) = 6765\n",
+      "Fibonacci(21) = 10946\n",
+      "Fibonacci(22) = 17711\n",
+      "Fibonacci(23) = 28657\n",
+      "Fibonacci(24) = 46368\n",
+      "Fibonacci(25) = 75025\n",
+      "Fibonacci(26) = 121393\n",
+      "Fibonacci(27) = 196418\n",
+      "Fibonacci(28) = 317811\n",
+      "Fibonacci(29) = 514229\n",
+      "Fibonacci(30) = 832040\n",
+      "Fibonacci(31) = 1346269\n",
+      "Fibonacci(32) = 2178309\n",
+      "Fibonacci(33) = 3524578\n",
+      "Fibonacci(34) = 5702887\n",
+      "Fibonacci(35) = 9227465\n",
+      "Fibonacci(36) = 14930352\n",
+      "Fibonacci(37) = 24157817\n",
+      "Fibonacci(38) = 39088169\n",
+      "Fibonacci(39) = 63245986\n",
+      "Fibonacci(40) = 102334155\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(41):\n",
+    "    print(f\"Fibonacci({i}) = {fibonacci(i)}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -81,27 +140,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "451e92ad-4c45-4cb3-b364-31f494e30289",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def fibonacci_iterativo(n):\n",
+    "    resultado = 0\n",
+    "    temp = 1\n",
+    "    for j in range(0, n):\n",
+    "        temp, resultado = resultado, resultado + temp\n",
+    "    return resultado"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "c2627128-e72a-4b18-b0e5-dcac10631f0e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "384 ms ± 1.85 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
+      "923 ns ± 2.56 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n",
+      "624 ms ± 1.85 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
+      "958 ns ± 35.8 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n",
+      "1.03 s ± 18.2 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
+      "1.01 μs ± 31.5 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%timeit fibonacci(32)\n",
+    "%timeit fibonacci_iterativo(32)\n",
+    "%timeit fibonacci(33)\n",
+    "%timeit fibonacci_iterativo(33)\n",
+    "%timeit fibonacci(34)\n",
+    "%timeit fibonacci_iterativo(34)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "ebe72ef3-0fdc-4808-8c44-668e9222fee4",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fib(30) recursivo: 832040 | iterativo: 832040\n",
+      "fib(31) recursivo: 1346269 | iterativo: 1346269\n",
+      "fib(32) recursivo: 2178309 | iterativo: 2178309\n",
+      "fib(33) recursivo: 3524578 | iterativo: 3524578\n",
+      "fib(34) recursivo: 5702887 | iterativo: 5702887\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(30, 35):\n",
+    "    print(f\"fib({i}) recursivo: {fibonacci(i)} | iterativo: {fibonacci_iterativo(i)}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -123,11 +224,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "66b25640-c0da-4d3e-8b8c-cf8627cf121a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "a = 3       \n",
+    "r = 1/2     \n",
+    "n = 20     "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -139,11 +244,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "2beb023a-1119-499f-b9e4-8d07f6e84bb3",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def serie_geom(n):\n",
+    "    suma = 0\n",
+    "    for i in range(n):\n",
+    "        suma += a * (r ** i)\n",
+    "    return suma"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -155,19 +266,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "ff3fe2f4-4586-465a-a82d-e07a8764e742",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "n = 1, suma = 3.0\n",
+      "n = 2, suma = 4.5\n",
+      "n = 3, suma = 5.25\n",
+      "n = 4, suma = 5.625\n",
+      "n = 5, suma = 5.8125\n",
+      "n = 6, suma = 5.90625\n",
+      "n = 7, suma = 5.953125\n",
+      "n = 8, suma = 5.9765625\n",
+      "n = 9, suma = 5.98828125\n",
+      "n = 10, suma = 5.994140625\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1, 11):\n",
+    "    print(f\"n = {i}, suma = {serie_geom(i)}\")"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "9cebeced-064a-41fb-9444-ae95a0f996e6",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Resultado para n = 20: 5.999994277954102\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Resultado para n = 20:\", serie_geom(20))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -187,11 +328,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "074911c2-0ca5-4677-8391-7d77113803bd",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def factorial(n):\n",
+    "    if n == 0 or n == 1:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return n * factorial(n - 1)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -203,11 +350,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "f087e0b3-ba72-4ec6-ab70-be34ae7a5dff",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1! = 1\n",
+      "2! = 2\n",
+      "3! = 6\n",
+      "4! = 24\n",
+      "5! = 120\n",
+      "6! = 720\n",
+      "7! = 5040\n",
+      "8! = 40320\n",
+      "9! = 362880\n",
+      "10! = 3628800\n",
+      "11! = 39916800\n",
+      "12! = 479001600\n",
+      "13! = 6227020800\n",
+      "14! = 87178291200\n",
+      "15! = 1307674368000\n",
+      "16! = 20922789888000\n",
+      "17! = 355687428096000\n",
+      "18! = 6402373705728000\n",
+      "19! = 121645100408832000\n",
+      "20! = 2432902008176640000\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1, 21):\n",
+    "    print(f\"{i}! = {factorial(i)}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -219,27 +396,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "c52108f1-9148-45b7-9b91-de45ec1e8d82",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def factorial(n):\n",
+    "    if n == 0 or n == 1:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return n * factorial(n - 1)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "0155899f-c75d-46a4-9545-c24f723a26b6",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1! = 1\n",
+      "2! = 2\n",
+      "3! = 6\n",
+      "4! = 24\n",
+      "5! = 120\n",
+      "6! = 720\n",
+      "7! = 5040\n",
+      "8! = 40320\n",
+      "9! = 362880\n",
+      "10! = 3628800\n",
+      "11! = 39916800\n",
+      "12! = 479001600\n",
+      "13! = 6227020800\n",
+      "14! = 87178291200\n",
+      "15! = 1307674368000\n",
+      "16! = 20922789888000\n",
+      "17! = 355687428096000\n",
+      "18! = 6402373705728000\n",
+      "19! = 121645100408832000\n",
+      "20! = 2432902008176640000\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1, 21):\n",
+    "    print(f\"{i}! = {factorial(i)}\")"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "d227fe94-d078-4e63-9407-054492dfe310",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def factorial_iterativo(n):\n",
+    "    resultado = 1\n",
+    "    for i in range(2, n + 1):\n",
+    "        resultado *= i\n",
+    "    return resultado"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -269,21 +488,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "id": "73b1b365-8fb0-45eb-9662-f8d2de69afe0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n"
+    "\n",
+    "def busqueda_lineal(lista, objetivo):\n",
+    "    for i in range(len(lista)):\n",
+    "        if lista[i] == objetivo:\n",
+    "            return i  \n",
+    "    return -1  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "id": "a00a757e-e4d8-44b4-bb02-f5b69d47aadf",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "-1\n"
+     ]
+    }
+   ],
+   "source": [
+    "numeros = [3, 8, 15, 23, 42, 56, 78]\n",
+    "print(busqueda_lineal(numeros, 42))   \n",
+    "print(busqueda_lineal(numeros, 10))   "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -297,19 +534,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "id": "f55c176a-fa2c-489d-9b43-7c4ae5461292",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "datos = [1.70, 1.65, 1.58, 1.81, 1.84, 1.78, 1.68, 1.72]"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "id": "e09c8066-3ad5-4bd6-82f1-7cd3c57df088",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "-1\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(busqueda_lineal(datos, 1.84))  \n",
+    "print(busqueda_lineal(datos, 1.60))   "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -321,11 +572,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "id": "16209386-19da-4e5f-82a4-254118a790c2",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "-1\n"
+     ]
+    }
+   ],
+   "source": [
+    "def busqueda_lineal(lista, valor):\n",
+    "    for i in range(len(lista)):\n",
+    "        if lista[i] == valor:\n",
+    "            return i\n",
+    "    return -1\n",
+    "\n",
+    "print(busqueda_lineal(datos, 1.84))  \n",
+    "print(busqueda_lineal(datos, 1.60))  "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -356,19 +625,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "a1205ce9-172f-4584-b801-68832f93fbce",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def ordenamiento_seleccion(lista):\n",
+    "    for i in range(len(lista)):\n",
+    "        min_idx = i\n",
+    "        for j in range(i+1, len(lista)):\n",
+    "            if lista[j] < lista[min_idx]:\n",
+    "                min_idx = j\n",
+    "        lista[i], lista[min_idx] = lista[min_idx], lista[i]\n",
+    "    return lista"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "5a2a8ef5-0468-49ee-96e6-4ff6da99b41c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1.58, 1.65, 1.68, 1.7, 1.72, 1.78, 1.81, 1.84]\n"
+     ]
+    }
+   ],
+   "source": [
+    "datos = [1.70, 1.65, 1.58, 1.81, 1.84, 1.78, 1.68, 1.72]\n",
+    "print(ordenamiento_seleccion(datos))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -380,11 +669,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "58dfd13a-509d-4006-919d-b5489347001d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1.58, 1.65, 1.7, 1.81, 1.84, 1.78, 1.68, 1.72]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lista = [1.70, 1.65, 1.58, 1.81, 1.84, 1.78, 1.68, 1.72]\n",
+    "\n",
+    "i = 0\n",
+    "min_idx = i\n",
+    "\n",
+    "for j in range(i+1, len(lista)):\n",
+    "    if lista[j] < lista[min_idx]:\n",
+    "        min_idx = j\n",
+    "\n",
+    "lista[i], lista[min_idx] = lista[min_idx], lista[i]\n",
+    "\n",
+    "print(lista)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -398,43 +708,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "id": "94996880-1a0f-40a3-ad33-e97191c600a0",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "lista = [1.85, 1.70, 1.58, 1.83, 1.80, 1.75, 1.70, 1.90, 1.65]"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "16111271-21a0-40ce-bbb4-b3758808d565",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def ordenamiento_seleccion(lista):\n",
+    "    for i in range(len(lista)):\n",
+    "        min_idx = i\n",
+    "        for j in range(i+1, len(lista)):\n",
+    "            if lista[j] < lista[min_idx]:\n",
+    "                min_idx = j\n",
+    "        lista[i], lista[min_idx] = lista[min_idx], lista[i]\n",
+    "    return lista"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "id": "71f56ca5-492d-4e01-949a-06fb868e2de8",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "ordenada = ordenamiento_seleccion(lista)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "id": "1f79dc76-a408-450e-a341-c89b90743b34",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lista ordenada: [1.58, 1.65, 1.7, 1.7, 1.75, 1.8, 1.83, 1.85, 1.9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Lista ordenada:\", ordenada)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "id": "6b3536e7-a97e-4722-875d-84d5a5207190",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.58\n",
+      "1.65\n",
+      "1.7\n",
+      "1.7\n",
+      "1.75\n",
+      "1.8\n",
+      "1.83\n",
+      "1.85\n",
+      "1.9\n"
+     ]
+    }
+   ],
+   "source": [
+    "for valor in ordenada:\n",
+    "    print(valor)"
+   ]
   }
  ],
  "metadata": {
@@ -453,7 +805,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
