Se realizo el capitulo 11

--- a/11.-Recursión, Iteración busqueda y Ordenamiento.ipynb
+++ b/11.-Recursión, Iteración busqueda y Ordenamiento.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 57,
    "id": "7221f5f0-f2e3-4c4f-a036-b7c0477a8114",
    "metadata": {},
    "outputs": [],
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 58,
    "id": "39156c16-41fa-4aab-ad45-86cc1b8f9e99",
    "metadata": {},
    "outputs": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 59,
    "id": "451e92ad-4c45-4cb3-b364-31f494e30289",
    "metadata": {},
    "outputs": [],
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 60,
    "id": "c2627128-e72a-4b18-b0e5-dcac10631f0e",
    "metadata": {},
    "outputs": [
@@ -163,12 +163,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "384 ms ± 1.85 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
-      "923 ns ± 2.56 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n",
-      "624 ms ± 1.85 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
-      "958 ns ± 35.8 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n",
-      "1.03 s ± 18.2 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
-      "1.01 μs ± 31.5 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n"
+      "384 ms ± 1.43 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
+      "913 ns ± 1.28 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n",
+      "618 ms ± 2.31 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
+      "945 ns ± 7.95 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n",
+      "1.01 s ± 6.51 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
+      "979 ns ± 12.9 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n"
      ]
     }
    ],
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 61,
    "id": "ebe72ef3-0fdc-4808-8c44-668e9222fee4",
    "metadata": {},
    "outputs": [
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 62,
    "id": "66b25640-c0da-4d3e-8b8c-cf8627cf121a",
    "metadata": {},
    "outputs": [],
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 63,
    "id": "2beb023a-1119-499f-b9e4-8d07f6e84bb3",
    "metadata": {},
    "outputs": [],
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 64,
    "id": "ff3fe2f4-4586-465a-a82d-e07a8764e742",
    "metadata": {},
    "outputs": [
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 65,
    "id": "9cebeced-064a-41fb-9444-ae95a0f996e6",
    "metadata": {},
    "outputs": [
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 66,
    "id": "074911c2-0ca5-4677-8391-7d77113803bd",
    "metadata": {},
    "outputs": [],
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 67,
    "id": "f087e0b3-ba72-4ec6-ab70-be34ae7a5dff",
    "metadata": {},
    "outputs": [
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 68,
    "id": "c52108f1-9148-45b7-9b91-de45ec1e8d82",
    "metadata": {},
    "outputs": [],
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 69,
    "id": "0155899f-c75d-46a4-9545-c24f723a26b6",
    "metadata": {},
    "outputs": [
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 70,
    "id": "d227fe94-d078-4e63-9407-054492dfe310",
    "metadata": {},
    "outputs": [],
@@ -466,6 +466,62 @@
    "metadata": {},
    "source": [
     "## 11.3.- Búsqueda"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "88fb6e83",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Búsqueda lineal:\n",
+      "Elemento encontrado en la posición 3\n",
+      "\n",
+      "Búsqueda binaria:\n",
+      "Elemento encontrado en la posición 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "numeros = [10, 25, 30, 45, 50, 65, 80]\n",
+    "\n",
+    "def busqueda_lineal(lista, objetivo):\n",
+    "    for i in range(len(lista)):\n",
+    "        if lista[i] == objetivo:\n",
+    "            return i\n",
+    "    return -1\n",
+    "\n",
+    "print(\"Búsqueda lineal:\")\n",
+    "indice = busqueda_lineal(numeros, 45)\n",
+    "if indice != -1:\n",
+    "    print(f\"Elemento encontrado en la posición {indice}\")\n",
+    "else:\n",
+    "    print(\"Elemento no encontrado\")\n",
+    "def busqueda_binaria(lista, objetivo):\n",
+    "    inicio = 0\n",
+    "    fin = len(lista) - 1\n",
+    "\n",
+    "    while inicio <= fin:\n",
+    "        medio = (inicio + fin) // 2\n",
+    "        if lista[medio] == objetivo:\n",
+    "            return medio\n",
+    "        elif lista[medio] < objetivo:\n",
+    "            inicio = medio + 1\n",
+    "        else:\n",
+    "            fin = medio - 1\n",
+    "\n",
+    "    return -1\n",
+    "\n",
+    "print(\"\\nBúsqueda binaria:\")\n",
+    "indice = busqueda_binaria(numeros, 50)\n",
+    "if indice != -1:\n",
+    "    print(f\"Elemento encontrado en la posición {indice}\")\n",
+    "else:\n",
+    "    print(\"Elemento no encontrado\")"
    ]
   },
   {
